# whitesur-cachyos-pack

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  install.sh  nimbus  nimbus.layers  revert.sh
1-base/: doctor.sh  nimbus-cachyos-macos.sh  whitesur-cachyos-macos.sh
10-shader-engine/: DREAMING-DESIGN.md  DREAMING-PHASE-HANDOFF.md  HEXEN-REFINEMENT-HANDOFF.md  HEXEN-TUNING-LOOP.md  README.md  SCENE-COMPOSITION.md  doctor.sh  fetch-hexen-assets.py  fetch-hexen-assets.sh  hexen-autotune.py  hexen-tune.py  revert.sh  run.sh  setup-dlss.sh
10-shader-engine/dream/: README.md  catalog.json  collect_digest.py  compose.py  dream-cycle.sh  dream.py  dreamlib.py  nimbus-dream.service  nimbus-dream.timer  test_compose.py  test_dream.py
10-shader-engine/hexen/: README.md  (+5 more)
10-shader-engine/nimbus-flux/: .gitignore  Cargo.toml
10-shader-engine/nimbus-flux/assets/: cyber_city.glb  cyber_core.glb  hero_core.glb
10-shader-engine/nimbus-flux/journey/: .gitignore  leg-000.json  leg-001.json  leg-002.json  leg-003.json
10-shader-engine/nimbus-flux/src/: fluid.rs  hero.rs  main.rs  scene_cyberpunk.rs  scene_hexen.rs  scene_journey.rs  window_react.rs
11-app-unify/: README.md  chromium-apply.sh  chromium-restore.sh  doctor.sh  electron-apply.sh  electron-restore.sh  firefox-apply.sh  firefox-restore.sh  flatpak-theme-apply.sh  flatpak-theme-restore.sh  install.sh  revert.sh
12-dreaming/: README.md  catalog.json  nightly-dream.sh
2-settings-refine/: doctor.sh  install.sh  revert.sh
3-krunner-finder/: doctor.sh  install.sh  revert.sh
4-login-lock/: doctor.sh
5-system-qol/: doctor.sh
6-local-ai/: Modelfile.hermes4-14b  Modelfile.hermes4.3-36b  doctor.sh
7-notifications/: doctor.sh
8-dolphin-quicklook/: PKGBUILD  doctor.sh  dolphinui.rc  install.sh  revert.sh  whitesur-quicklook.desktop
9-gpu-effects/: doctor.sh  install.sh  revert.sh
lib/: doctor-lib.sh
tests/: README.md  qml_instantiate.py  run.sh
(+80 files in other folders)
